--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,18 @@
 /* element selectors by parent */
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
+a {
+  text-decoration: none;
+}
 /* class in alpha order */
+.ai-c {
+  align-items: center;
+}
+.bgc-boringblue {
+  background-color: rgb(37, 137, 289);
+}
 .bgc-lightgray {
   background-color: lightgray;
 }
@@ -13,10 +22,52 @@ body {
 .bgc-steelblue {
   background-color: steelblue;
 }
-
+.c-white {
+  color: white;
+}
+.d-f {
+  display: flex;
+}
+.jc-sb {
+  justify-content: space-between;
+}
+.lis-n {
+  list-style: none;
+}
+.m0 {
+  margin: 0;
+}
+.ml {
+  margin-left: 1.5rem;
+}
+.mt {
+  margin-top: 1.5rem;
+}
+p0 {
+  padding: 0;
+}
 .p {
   padding: 1.5rem;
 }
+.ff-impact {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+.fw-700 {
+  font-weight: 700;
+}
+.fz-2 {
+  font-size: 2rem;
+}
 .w-100 {
   width: 100%;
+}
+
+/* media query */
+@media (min-width: 768px) {
+  .d-f\@lrg {
+    display: flex;
+  }
+}
+.ml\@lrg {
+  margin-left: 1.5rem;
 }
