--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,10 @@ body {
 a {
   text-decoration: none;
 }
+p {
+  color: white;
+  font-size: 0.75rem;
+}
 /* class in alpha order */
 .ai-c {
   align-items: center;
@@ -31,8 +35,8 @@ a {
 .ff-impact {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-.fw-700 {
-  font-weight: 700;
+.fw-500 {
+  font-weight: 500;
 }
 .fz-2 {
   font-size: 2rem;
